# Robot_Boat_Simulation

asv_wave_sim_gazebo/: CMakeLists.txt  package.xml
asv_wave_sim_gazebo/config/: config.rviz  costmap_common_params.yaml
asv_wave_sim_gazebo/launch/: boat_control.launch  ocean_world.launch
asv_wave_sim_gazebo/maps/: map.yaml
asv_wave_sim_gazebo/models/boatcleaningc/: model.sdf
asv_wave_sim_gazebo/scripts/: boat_controller.py  fan_controller.py
asv_wave_sim_gazebo/scripts/Firebase/: .env  main.py
asv_wave_sim_gazebo/scripts/camera/: waste_tracker_node.py
asv_wave_sim_gazebo/scripts/firebase/: .env
asv_wave_sim_gazebo/scripts/navigation/: navigation_node.py
boatcleaningc/urdf/: boatcleaningc.sdf
